Prevent skinny showcase items from being distorted by eliminating min-width

--- a/themes/vibio/css/collections.css
+++ b/themes/vibio/css/collections.css
@@ -1,33 +1,32 @@
 /* override collections page Search tool -Keith */
-.view-user-collections .view-filters { display: none; }
-
+.view-user-collections .view-filters {
+	display: none;
+}
 /*.user-collection-preview td { width: 360px; }
-.user-collection-preview .collection_list_image img { max-width: 63px; }
-.collection-preview-boxshadow { float: left; box-shadow: 3px 3px 3px 1px #ccc; padding: 3px; width: 335px; }
-.collection_list_collection .collection_image { width: inherit; }
-.collection_list_collection .collection_image img { max-width: 200px; }
-.collection_list_collection .collection_summary { width: 518px; }
-*/
-.view-user-collections div.view-content{
+ .user-collection-preview .collection_list_image img { max-width: 63px; }
+ .collection-preview-boxshadow { float: left; box-shadow: 3px 3px 3px 1px #ccc; padding: 3px; width: 335px; }
+ .collection_list_collection .collection_image { width: inherit; }
+ .collection_list_collection .collection_image img { max-width: 200px; }
+ .collection_list_collection .collection_summary { width: 518px; }
+ */
+.view-user-collections div.view-content {
 	margin-top: 6px;
 	position: relative;
 }
 .collection_list_collection .collection_image {
 	margin-right: 10px;
-	padding:5px 0px 2px 5px;
+	padding: 5px 0px 2px 5px;
 	border: 1px solid #CCCCCC;
 	background: #FFFFFF;
 }
-.collection_list_collection .collection_image img{
-	max-width: 77px;
-	min-width 100px;
+.collection_list_collection .collection_image img {
+	max-width: 77px;min-width 100px;
 	border: 1px solid #CCCCCC;
 }
 .collections_view_header {
-	position:absolute;
-	right:22px
+	position: absolute;
+	right: 22px
 }
-
 .collection_list_collection {
 	margin-bottom: 25px;
 }
@@ -41,7 +40,7 @@
 	width: 595px;
 }
 .collection_summary h3 {
-	
+
 	margin: 0;
 }
 .collection_summary p {
@@ -68,14 +67,13 @@
 	font-size: 15px;
 	font-weight: bold;
 }
-.collection_preview_init span:hover{
+.collection_preview_init span:hover {
 	text-decoration: underline
 }
 .collection_preview_init img {
 	margin-right: 5px;
 }
 .collection_preview_init.expanded {
-
 }
 .collection_preview_init:hover {
 	cursor: pointer;
@@ -92,11 +90,11 @@
 	margin-right: 10px;
 }
 .collection_list_image img {
-	max-height: 100px; 
+	max-height: 100px;
 	border: 1px solid #CCCCCC;
 }
 .collection_list_item_summary {
-	border-bottom:1px solid #CCCCCC; 
+	border-bottom: 1px solid #CCCCCC;
 	margin: 5px 10px 5px 0px;
 	min-height: 110px;
 }
@@ -115,14 +113,13 @@
 	width: 365px;
 	vertical-align: top;
 }
-td.col-1{ 
-	
+td.col-1 {
 }
-td.col-2{ 
-	padding-left:10px;
-	border-left: 1px solid #CCCCCC; 
+td.col-2 {
+	padding-left: 10px;
+	border-left: 1px solid #CCCCCC;
 }
-.minisocialbar div{
+.minisocialbar div {
 }
 .user-collection-preview tr {
 	height: 60px;
@@ -137,18 +134,15 @@ td.col-2{
 	display: none;
 }
 #collection_main, #collection_sidebar {
-	float: left;
 }
 #collection_main {
-	width: 515px;
 }
 #collection_main .collection_summary {
 	width: 400px;
 }
 #collection_sidebar {
-	width: 185px;
-	border-left: 1px solid #a5a5a5;
-	padding-left: 20px;
+	display: none
+	/*Hideing the side bar*/
 }
 #collection_sidebar h5 {
 	margin: 10px 0 0;
@@ -179,7 +173,7 @@ td.col-2{
 	margin-bottom: 0;
 	min-height: 234px;
 }
-#block-collection-random_collection h2{
+#block-collection-random_collection h2 {
 	padding: 10px 0;
 }
 /*Background Image*/
@@ -198,14 +192,14 @@ td.col-2{
 }
 #block-collection-random_collection .collection_image img {
 	border: 1px solid #CCC;
-	background:#FFFFFF;
+	background: #FFFFFF;
 	padding: 5px;
 	max-height: 115px;
 	max-width: 115px;
 }
-#block-collection-random_collection .collection_info {	
+#block-collection-random_collection .collection_info {
 }
-#block-collection-random_collection .collection_owner{
+#block-collection-random_collection .collection_owner {
 	padding-top: 6px;
 }
 #block-collection-random_collection .collection_owner a, #block-collection-random_collection .collection_title a {
